--- a/view/tutorial/intro.html
+++ b/view/tutorial/intro.html
@@ -5,6 +5,10 @@
     <p>Cidana的项目经理职责将被大致划分为如下几个范畴：</p>
     <ul style="margin-left:2rem;">
         <li>我们的项目产出什么-了解公司产品（product management)</li>
+        <ul>
+            <li>产品的定义</li>
+            <li>产品的宣传</li>
+        </ul>
         <li>我们如何获得项目-市场开拓(Business Development)</li>
         <li>我们如何管理项目-项目管理(Project Management)</li>
         <ul>
@@ -15,13 +19,13 @@
             <li>Asset Management</li>
             <li>Product Delivery</li>
             <li>Monitor and Control</li>
+            <ul>
+                <li>Marketing meeting，口头汇报</li>
+                <li>Reports, 书写各种report并提供给相应的人员</li>
+                <li>QBR, 对自己的工作进行自我评价</li>
+            </ul>
         </ul>
-        <li>我们的工作产出什么 —— Reports</li>
-        <ul>
-            <li>Marketing meeting，口头汇报</li>
-            <li>Reports, 书写各种report并提供给相应的人员</li>
-            <li>QBR, 对自己的工作进行自我评价</li>
-        </ul>
+
     </ul>
 
 
