--- a/view/tutorial/introtool.html
+++ b/view/tutorial/introtool.html
@@ -22,7 +22,7 @@
 
 
     <h2>时间管理类</h2>
-    <img src="/img/UI/2020-05-09_13-45-40.jpg"><h3>&nbspMicrosoft To Do&nbsp</h3>
+    <img src="/img/UI/2020-05-09_13-45-40.png"><h3>&nbspMicrosoft To Do&nbsp</h3>
     <p>简单的个人时间管理软件，类似的产品有很多，选择自己喜欢的使用即可。</p>
     <p>循环开设的任务主要如下：</p>
     <table style="margin-left:2.5rem;">
@@ -53,22 +53,63 @@
     <img src="/img/UI/2020-05-09_14-13-47.jpg"><h3>&nbspMicrosoft Team&nbsp</h3>
     <p>主要用于内部成员沟通与交流，以及会议的召开、文件分享等等：</p>
 
-    <h2>产品管理工具</h2>
+    <h2>项目托管类</h2>
+    <img src="/img/UI/2020-05-22 github paint.png"><h3>&nbspGithub Account&nbsp</h3>
+    <p>在github上我们存放了部分可以向大众公开的项目，与此同时我们也使用github做一些项目管理的Task Manager工作。</p>
+    <p>地址：<a href="https://github.com/Cidana-Developers/Cidana-Task-Manager/issues" target="_blank">+Cidana Task Manager+</a></p>
+    <p>github可以使用自己的账号也可以新建账号，要求IT相关人员将你的账号加入即可使用。</p>
+
+    <img src="/img/UI/2020-05-22 cidana git.png"><h3>&nbspCidana Git&nbsp</h3>
+    <p>Cidana git是在我们公司内部服务器上搭建起来的项目托管仓库，一些处于开发阶段的代码会放在上面，PM的assets库也保存在其上。</p>
+    <p>地址：<a href="http://192.168.0.234/" target="_blank">+Cidana git+</a></p>
+    <p>该仓库使用Cidana账号登陆即可，需要联系IT给予授权。</p>
+
+    <h2>产品发布类</h2>
     <img src="/img/UI/2020-05-09_14-16-01.jpg"><h3>&nbspGoogle Play Console&nbsp</h3>
-    <p>主要用于记录和管理公司已经发放的Android市场应用产品。</p>
+    <p>主要用于记录和管理公司已经发放的Android市场应用产品，也可完成国际产品的发布。</p>
     <p>地址：<a href="https://play.google.com/apps/publish/?account=7016177104650620861#AppListPlace">+前往+</a></p>
 
-    <img src="/img/UI/2020-05-09_14-18-53.jpg"><h3>&nbspGoogle Analytics&nbsp</h3>
-    <p>主要用于记录和管理公司产品的销售量与销售情况。</p>
+    <img src="/img/UI/2020-05-22 tencent appmarket.png"><h3>&nbsp腾讯 应用宝&nbsp</h3>
+    <p>主要用于发布中国市场使用的应用等产品。</p>
     <p>地址：<a href="https://analytics.google.com/analytics/web/?hl=zh-CN&pli=1#/p218701843/reports/home?params=_u..nav%3Dga1-experimental">+前往+</a></p>
-    <p>使用教程：<a href="/tutorial/reportroyalty#googleAnalytics" target="_blank">+前往+</a></p>
+    <table style="margin-left:2rem;">
+        <tr><td>地址</td><td style="display:flex;flex-direction:row;">
+            <div><span>https://sj.qq.com/</span></div>
+            <div style="margin-left:2rem;">
+                <button onclick="copyPrev(this)">COPY</button>
+                <button onclick="newLink(this)" style="margin-left:0.8rem;">GO</button>
+            </div>
+        </td></tr>
+        <tr><td>账号</td><td>
+            <table style="border-collapse:collapse;">
+                <tr><td>用户名:</td><td><span>2351621735</span></td><td><button onclick="copyPrev(this)">COPY</button></td></tr>
+                <td>密码:</td><td>cidana159357</td><td><button onclick="copyPrev(this)">COPY</button></td>
+            </table>
+        </td></tr>
+    </table>
 
-    <img src="/img/UI/2020-05-09_14-30-02.jpg"><h3>&nbspFile Zilla&nbsp</h3>
+    <img src="/img/UI/2020-05-09_14-30-02.png"><h3>&nbspFile Zilla&nbsp</h3>
     <p>公司使用的FTP传输工具，主要用于对客户发布和传输必备的镜像文件、sdk文件等等内容使用。</p>
     <p>基本保持一个客户一个账号的原则，如果该客户在客户信息中没有开设FTP账户，或已开设的FTP账户失效，需要联系IT人员进行重新分配。</p>
     <p>可依照自己的喜好使用自己习惯使用的FTP传输工具。</p>
     <table style="margin-left:2rem;">
         <tr><td>公网地址</td><td>ftp.cidanaash.com</td></tr>
         <tr><td>内部访问地址</td><td>ftp://ftp.cidanash.com:8021</td></tr>
+    </table>
+
+    <h2>市场分析管理类</h2>
+
+    <img src="/img/UI/2020-05-09_14-18-53.jpg"><h3>&nbspGoogle Analytics&nbsp</h3>
+    <p>主要用于记录和管理公司产品的销售量与销售情况。</p>
+    <p>地址：<a href="https://analytics.google.com/analytics/web/?hl=zh-CN&pli=1#/p218701843/reports/home?params=_u..nav%3Dga1-experimental">+前往+</a></p>
+    <p>使用教程：<a href="/tutorial/reportroyalty#googleAnalytics" target="_blank">+前往+</a></p>
+
+
+    <h3 style="margin-left:6rem;margin-top:2rem;">&nbspCidana Server&nbsp</h3>
+    <p>主要用于记录和管理公司的PO与相应的销售状况。</p>
+    <p>地址：<a href="https://sshz.cidanash.com:9090/index.html" target="_blank">+前往+</a></p>
+    <table style="margin-left:3rem;">
+        <tr><td>用户名:</td><td><span>Sophie</span></td><td><button onclick="copyPrev(this)">COPY</button></td></tr>
+        <td>密码:</td><td>sophie</td><td><button onclick="copyPrev(this)">COPY</button></td>
     </table>
 </div>
