--- a/view/developerManager.html
+++ b/view/developerManager.html
@@ -2,9 +2,165 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Cidana 开发资源统筹</title>
+    <link href="/css/general.css" rel="stylesheet" type="text/css"/>
+    <link href="/fontawesome/css/all.min.css" rel="stylesheet" type="text/css"/>
+    <script src="/lib/lz-string.min.js"></script>
+    <script src="/lib/angular.min.js"></script>
+    <script>
+        var app = angular.module("dashboard",[]);
+    </script>
+    <script src="/js/dataManager.js"></script>
+    <script src="/js/projectFilter.js"></script>
+    <script src="/js/projectManager.js"></script>
 </head>
-<body>
-$END$
+<style>
+    #projectTable{
+        margin-left:auto;
+        margin-right:auto;
+        margin-top:0.2rem;
+        border-collapse:collapse;
+    }
+
+    #projectTable td{
+        padding:0.5rem;
+        padding-right:1.5rem;
+        padding-left:1.5rem;
+    }
+
+    #projectTable tr:nth-child(1) td{
+        border-top:1px solid lightgray;
+        border-bottom:1px solid lightgray;
+    }
+
+    .topBtnRow{
+        display:flex;
+        flex-direction:row;
+        margin-left:auto;
+        margin-right:8rem;
+        margin-top:1rem;
+    }
+
+    #headerButtons{
+        margin:auto;
+        margin-right:2rem;
+        font-family:'Microsoft YaHei UI Light';
+        font-size:0.8rem;
+        display:flex;
+        flex-direction:row;
+        min-height:3rem;
+    }
+
+    #headerButtons >a{
+        margin-left:0.8rem;
+        margin-top:auto;
+        margin-bottom:0.2rem;
+
+    }
+</style>
+<body ng-app="dashboard"
+      ng-controller="projectDashboard">
+<info-receiver  ng-init="contents = '<%= encodeURIComponent(JSON.stringify(contents)) %>'"></info-receiver>
+<div id="header">
+    <div style="margin-top:auto;margin-bottom:auto;margin-left:0.5rem;">Cidana项目管理工具</div>
+    <div id="headerButtons">
+        <a href="http://127.0.0.1:4000/doc" target="_blank">ASSET</a>
+        <a href="http://127.0.0.1:4000/account" target="_blank">ACCOUNT</a>
+        <a href="http://127.0.0.1:4000/tutorial" target="_blank">REFERENCE</a>
+    </div>
+</div>
+<div id="main">
+    <div class="topBtnRow"><button ng-click="addProject()" class="addDocBtn">添加项目</button></div>
+    <table id="projectTable">
+        <tr><td>Account</td><td>End Customer</td><td>Project name</td>
+            <td>priority</td><td>schedule</td><td>product</td><td>status</td><td>established</td></tr>
+        <tr ng-repeat="entry in contents.entries"
+            ng-mouseover="hoverPlink($event,true)"
+            ng-mouseleave="hoverPlink($event,false)"
+            ng-click="goToProject(entry._id)"
+            project-status schedule="{{entry.schedule}}" status="{{entry.status}}">
+            <a href="{{'/pm/info?id='+entry._id}}">
+                <td>{{entry.account | account}}</td>
+                <td>{{entry.endCustomer | account}}</td>
+                <td>{{entry.name}}</td>
+                <td>{{entry.priority}}</td>
+                <td>{{entry.schedule | date:"&y/&m/&d"}}</td>
+                <td>{{entry.delivery.description}}</td>
+                <td> {{entry.status | status }} </td>
+                <td>{{entry.date | date:'&y/&m/&d'}}</td>
+            </a>
+        </tr>
+    </table>
+    <div class="pageCount" style="margin-top:auto;margin-bottom:1.5rem;display:flex;flex-direction:row;padding-top:3rem;">
+        <div ng-if="pageIndex.startIndex>1"><button ng-click="pageIndex.goToPage(1)">1</button></div>
+        <div ng-if="pageIndex.startIndex>2">…</div>
+        <div ng-repeat="x in [].constructor(7) track by $index">
+            <button ng-if="$index+pageIndex.startIndex <= pageIndex.pageMax"
+                    ng-click="pageIndex.goToPage($index+pageIndex.startIndex)"
+                    ng-disabled="pageIndex.pageId-pageIndex.startIndex === $index">{{$index+pageIndex.startIndex}}</button></div>
+        <div ng-if="pageIndex.startIndex+7 < pageIndex.pageMax">…</div>
+        <div ng-if="pageIndex.startIndex+7 <= pageIndex.pageMax">
+            <button ng-click="pageIndex.goToPage(pageIndex.pageMax)">{{pageIndex.pageMax}}</button>
+        </div>
+    </div>
+</div>
+<div class="footer" style="padding-top:1rem;padding-bottom:1rem;display:flex;height:2rem;">
+    <div style="margin:auto;">cidana corporation</div>
+</div>
+<div id="pageCover" class="coverLayer" style="background:rgba(58,58,58,0.4);position:fixed;">
+    <div class="addDoc" style="position:relative;">
+        <div class="addDocCover coverLayer" style="z-index:99;background:rgba(218,218,218,0.4);">
+            <i class="fa fa-spinner fa-spin fa-3x" style="margin:auto;"></i>
+        </div>
+        <div style="margin:1rem;display:flex;flex-direction:column;">
+            <table id="docDetail" class="displayTable" style="flex:1;margin-top:0.5rem;">
+                <tr><td>项目名称</td><td><input ng-model="newProject.name"></td></tr>
+                <tr><td>客户</td><td>
+                    <select ng-model="newProject.account" onchange="this.size=0" onmousedown="if(this.options.length>10){this.size=10}" onblur="this.size = 0" style="position:absolute;z-index:99;">
+                        <option value="1">请选择客户</option>
+                        <option value="0">没有客户</option>
+                        <% for(var i=0;i<accounts.length;++i){ %>
+                        <option value="<%- accounts[i]._id %>"><%- accounts[i].name %></option>
+                        <% } %>
+                    </select>
+                </td></tr>
+                <tr><td>终端客户</td><td>
+                    <select ng-model="newProject.endCustomer" onchange="this.size=0" onmousedown="if(this.options.length>10){this.size=10}" onblur="this.size = 0" style="position:absolute;z-index:98;">
+                        <option value="1">请选择终端客户</option>
+                        <option value="0">没有终端客户</option>
+                        <% for(var i=0;i<ECMs.length;++i){ %>
+                        <option value="<%- ECMs[i]._id %>"><%- ECMs[i].name %></option>
+                        <% } %>
+                    </select>
+                </td></tr>
+                <tr><td>优先级</td><td>
+                    <select ng-model="newProject.priority">
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                    </select>
+                </td></tr>
+                <tr><td>状态</td><td>
+                    <select ng-model="newProject.status">
+                        <option value="0">opportunities</option>
+                        <option value="1">business</option>
+                        <option value="2">development</option>
+                        <option value="3">delivery</option>
+                        <option value="4">maintenance</option>
+                    </select>
+                </td></tr>
+                <tr><td>备注</td><td>
+                    <textarea ng-model="newProject.description"></textarea>
+                </td></tr>
+            </table>
+            <div style="display:flex;flex-direction:row;margin-top:1rem;">
+                <button style="margin-left:6rem;margin-right:auto;" ng-click="submitDoc()">提交</button>
+                <button style="margin-left:auto;margin-right:6rem;" ng-click="cancelAddDoc()">取消</button>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
