--- a/view/accountManager.html
+++ b/view/accountManager.html
@@ -2,9 +2,133 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Cidana 客户与第三方信息维护工具</title>
+    <link href="/css/general.css" rel="stylesheet" type="text/css"/>
+    <link href="/fontawesome/css/all.min.css" rel="stylesheet" type="text/css"/>
+    <script src="/lib/lz-string.min.js"></script>
+    <script src="/lib/angular.min.js"></script>
+    <script>
+        var app = angular.module("dashboard",[]);
+    </script>
+    <script src="/js/general.js"></script>
+    <script src="/js/dataManager.js"></script>
+    <script src="/js/projectFilter.js"></script>
+    <script src="/js/accountManager.js"></script>
 </head>
-<body>
-$END$
+<style>
+    #projectTable{
+        margin-left:auto;
+        margin-right:auto;
+        margin-top:0.2rem;
+        border-collapse:collapse;
+    }
+
+    #projectTable td{
+        padding:0.5rem;
+        padding-right:1.5rem;
+        padding-left:1.5rem;
+    }
+
+    #projectTable br{
+        margin-bottom:0.5rem;
+    }
+
+    #projectTable tr:nth-child(1) td{
+        border-top:1px solid lightgray;
+        border-bottom:1px solid lightgray;
+        background: rgba(152,75,67,0.8);
+        color:white;
+    }
+
+    #projectTable tr>td:last-child{
+        min-width:23rem;
+        max-width:23rem;
+    }
+
+    #projectTable tr>td:nth-last-child(2){
+        max-width:15rem;
+        min-width:15rem;
+    }
+
+    .topBtnRow{
+        display:flex;
+        flex-direction:row;
+        margin-left:auto;
+        margin-right:8rem;
+        margin-top:1rem;
+    }
+
+</style>
+<body ng-app="dashboard"
+      ng-controller="accountCon">
+<info-receiver  ng-init="contents = '<%= encodeURIComponent(JSON.stringify(contents)) %>'"></info-receiver>
+<div id="header">
+    <div style="margin-top:auto;margin-bottom:auto;margin-left:0.5rem;">Cidana项目管理工具</div>
+</div>
+<div id="main">
+    <div class="topBtnRow"><button onclick="showPageCover(20)" class="addDocBtn">添加客户</button></div>
+    <table id="projectTable">
+        <tr><td>Name</td><td>Alias</td><td>Parent</td><td style="text-align:center;">Priority</td><td style="text-align:center;">Country</td><td>Website</td><td>Description</td></tr>
+        <tr ng-repeat="entry in contents.entries">
+                <td>{{entry.name}}</td>
+                <td>{{entry.alias}}</td>
+                <td account-parent account="{{entry.parent}}"></td>
+                <td style="text-align:center;">{{entry.priority }}</td>
+                <td style="text-align:center;">{{entry.country | countryCode}}</td>
+                <td><a href="{{ 'http://' + entry.official}}" target="_blank">{{entry.official}}</a></td>
+                <td content-format contents="{{entry.description}}"></td>
+        </tr>
+    </table>
+    <div class="pageCount" style="margin-top:auto;margin-bottom:1.5rem;display:flex;flex-direction:row;padding-top:3rem;">
+        <div ng-if="pageIndex.startIndex>1"><button ng-click="pageIndex.goToPage(1)">1</button></div>
+        <div ng-if="pageIndex.startIndex>2">…</div>
+        <div ng-repeat="x in [].constructor(7) track by $index">
+            <button ng-if="$index+pageIndex.startIndex <= pageIndex.pageMax"
+                    ng-click="pageIndex.goToPage($index+pageIndex.startIndex)"
+                    ng-disabled="pageIndex.pageId-pageIndex.startIndex === $index">{{$index+pageIndex.startIndex}}</button></div>
+        <div ng-if="pageIndex.startIndex+7 < pageIndex.pageMax">…</div>
+        <div ng-if="pageIndex.startIndex+7 <= pageIndex.pageMax">
+            <button ng-click="pageIndex.goToPage(pageIndex.pageMax)">{{pageIndex.pageMax}}</button>
+        </div>
+    </div>
+</div>
+<div class="footer" style="padding-top:1rem;padding-bottom:1rem;display:flex;height:2rem;">
+    <div style="margin:auto;">@ cidana corporation</div>
+</div>
+<div id="pageCover" class="coverLayer" style="background:rgba(58,58,58,0.4);position:fixed;">
+    <div class="addDoc" style="position:relative;">
+        <div class="addDocCover coverLayer" style="z-index:99;background:rgba(218,218,218,0.4);">
+            <i class="fa fa-spinner fa-spin fa-3x" style="margin:auto;"></i>
+        </div>
+        <div style="margin:1rem;display:flex;flex-direction:column;">
+            <table id="docDetail" class="displayTable" style="flex:1;margin-top:0.5rem;">
+                <tr><td>客户</td><td><input ng-model="newAccount.name" placeholder="Company name(mandatory)"></td></tr>
+                <tr><td>客户别名</td><td><input ng-model="newAccount.alias" placeholder="alias(optional)"></td></tr>
+                <tr><td>官方网站</td><td><input ng-model="newAccount.official" placeholder="official website(optional)"></td></tr>
+                <tr><td>父公司</td><td style="display:flex;flex-direction:row;"><input ng-model="parentSearch" style="max-width:10rem;margin-right:0.5rem;" placeholder="Company name">
+                    <i class="fa fa-spinner fa-spin" ng-show="parentSearching"></i>
+                    <select style="opacity:0;position:absolute;left:0;z-index:99" ng-model="newAccount.parrent"></select>
+                </td></tr>
+                <tr><td>优先级</td><td>
+                    <select ng-model="newAccount.priority">
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                    </select>
+                </td></tr>
+                <tr><td>国家</td><td><select ng-model="newAccount.country" ng-options="country.code as country.country for country in countryCodes"></select></td></tr>
+                <tr><td>简介</td><td>
+                    <textarea ng-model="newAccount.description"></textarea>
+                </td></tr>
+            </table>
+            <div style="display:flex;flex-direction:row;margin-top:1rem;">
+                <button style="margin-left:6rem;margin-right:auto;" ng-click="submitDoc()">提交</button>
+                <button style="margin-left:auto;margin-right:6rem;" onclick="cancelDoc()">取消</button>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
