--- a/view/projectManager.html
+++ b/view/projectManager.html
@@ -65,7 +65,7 @@
     <div style="margin-top:auto;margin-bottom:auto;margin-left:0.5rem;">Cidana项目管理工具</div>
     <div id="headerButtons">
         <a href="http://127.0.0.1:4000/doc" target="_blank">ASSET</a>
-        <a href="http://127.0.0.1:4000/accountManager" target="_blank">ACCOUNT</a>
+        <a href="http://127.0.0.1:4000/account" target="_blank">ACCOUNT</a>
         <a href="http://127.0.0.1:4000/tutorial" target="_blank">REFERENCE</a>
     </div>
 </div>
